# Video-Engagement-Analytics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboards/: retention_insights.twb  streamlit_app.py
data/processed/: session_features.parquet  videos_clean.parquet  videos_clean_min.parquet  watch_events.parquet
data/raw/: video_metadata.csv  watch_events.csv
docs/: architecture.md
notebooks/: 01_explore_videos.ipynb  02_user_sessions.ipynb  03_churn_model.ipynb
src/: __init__.py  churn_model.py  clean.py  data_contracts.py  features.py  ingest.py  metrics.py  simulate_watch.py  utils.py
tests/: test_churn_model.py  test_features.py  test_metrics.py
