[tool.poetry]
name = "reels-analytics"
version = "0.1.0"
description = "Analyze short-form video engagement, retention cohorts, and churn risk."
authors = ["Reels Analytics Contributors <retention@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
plotly = "^5.19.0"
streamlit = "^1.31.0"
pydantic = "^1.10.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
