[tool.poetry]
name = "reels-analytics"
version = "0.1.0"
description = "Analyze short-form video engagement, retention cohorts, and churn risk."
authors = ["Reels Analytics Contributors <retention@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
